force-app/main/default/objects/et4ae5__Configuration__c/et4ae5__Configuration__c.object-meta.xml
<CustomObject>
    <label>Configuration</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>