force-app/main/default/objects/et4ae5__Configuration__c/fields/et4ae5__url_root__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__url_root__c</fullName>
    <defaultValue>&quot;mc&quot;</defaultValue>
    <label>URL Root</label>
    <length>10</length>
    <type>Text</type>
</CustomField>